# jupyter

./: normalize_t0d1.root
grit_check/: t0d1.ipynb  t0d2.ipynb  t0d3.ipynb  t0d4.ipynb
ingot_check/: nomalize_t0d1.ipynb  nomalize_t0d3.ipynb  nomalize_t0d4.ipynb  t0.ipynb  t0d1.ipynb  t0d2.ipynb  t0d3.ipynb  t0d4.ipynb  view_normalize_t0d2.py
ingot_check/root_file/: normalize_t0d1.root  normalize_t0d2.root  normalize_t0d3.root  normalize_t0d4.root
macro/check_time/: CMakeLists.txt  check_time.root  read_time.cpp
match_check/: match_check_t1_0057.ipynb
